--- a/App de Frontend/Menu Digital/main.css
+++ b/App de Frontend/Menu Digital/main.css
@@ -38,29 +38,35 @@ body {
 #mercaderia-section {
   font-family: "Poppins", sans-serif;
   padding: 30px;
-  background: #1D212B;
+  background: #16384c;
 }
 
 .card {
   background-color: #1D212B; 
   color: #fff;
-  width: 400px;
-  height: 30%;
+  width: 280px;
+  height: 300px;
+  /*height: auto;*/
   display: block;
+  align-items: center;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   border: #c0392b 3px solid;
 }
 .card-img-top {
-  padding-right: 6px;
-  width: 400px;
-  height: 200px;
+  padding-top: 5px;
+  width: 100%;
+  height: 50%;
 }
 
 .card-img-top-detalle {
   width: 100%;
   height: 150px
+}
+
+.card-title , .card-text , .btn {
+  text-align: center;
 }
 .carousel {
   margin: auto;
@@ -71,13 +77,14 @@ body {
   text-align: center;
 }
 
-#pedidos-section {
+/*#pedidos-section {
   font-family: "Poppins", sans-serif;
   padding: 10px;
   display: flex;
   background: #16384c;
-}
-#img-simbolo {
+}*/
+
+#img-simbolo{
   padding-top: 150px;
 }
 
@@ -85,11 +92,24 @@ body {
   width: 150px;
 }
 
+.btn-group-vertical {
+  padding-top: 70px;
+  padding-right: 100px;
+}
+.ver-mas {
+  background-color: #c0392b;
+  border: #333 solid;
+  border-radius: 2em;
+}
 .table {
   color: #fff;
 }
 
-.contenedor {
+#btn-agregar {
+  background-color: #24803F;
+  border: #333;
+}
+/*.contenedor {
   position: relative;
   width: 1100px;
   display: flex;
@@ -154,7 +174,10 @@ body {
   margin-top: -40px;
   transition-delay: 0.3s;
 }
-
+*/
+#enviar-pedido {
+  margin-top: 15px;
+}
 .form-floating {
   color: black;
 }
