--- a/App de Frontend/Menu Digital/styles/main.css
+++ b/App de Frontend/Menu Digital/styles/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 #home-section {
-    background: url('./img/resto.jpg') no-repeat;
+    background: url('/img/resto.jpg') no-repeat;
     min-height: 100vh;
     background-size: cover;
     background-attachment: fixed;
