modal detalle mercaderia

--- a/App de Frontend/Menu Digital/styles/main.css
+++ b/App de Frontend/Menu Digital/styles/main.css
@@ -20,6 +20,8 @@ body {
 
 #presentacion {
     padding-left: 100px;
+    font-family: "Poppins", sans-serif;
+    font-size: large;
 }
 
 .dark-overlay {
@@ -46,7 +48,6 @@ body {
   color: #fff;
   width: 280px;
   height: 300px;
-  /*height: auto;*/
   display: block;
   align-items: center;
   margin-top: 10px;
@@ -190,4 +191,8 @@ body {
 }
 .form-floating {
   color: black;
+}
+
+.modal-content {
+  background-color: darkslategrey;
 }
