--- a/App de Frontend/Menu Digital/views/index.html
+++ b/App de Frontend/Menu Digital/views/index.html
@@ -19,10 +19,11 @@
                     <div class="row">
                         <div class="col-lg-8 d-none d-sm-block">
                             <div id="presentacion">
-                                <h1 class="display-4">Restaurante</h1>
-                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ratione molestiae repellat reprehenderit accusamus earum accusantium voluptas voluptatum asperiores possimus error, ad non saepe labore consectetur. Labore, eveniet. Aperiam, consequuntur!</P>
+                                <h1 class="display-4">Restaurante UNAJ</h1>
+                                <P> Debido a la situación actual de pandemia que atraviesa el mundo, nos vimos obligados a tomar medidas para poder seguir atendiendo al público. Una de estas medidas es dejar de compartir la carta con nuestros clientes, es por ello que en esta página web podrá visualizar todos nuestros platos y realizar su pedido. </P>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -100,20 +101,35 @@
           <div class="card-body">
             <h5 class="card-title" id="nombre"></h5>
             <p class="card-text">$ <span>500</span></p>
-            <div class="collapse">
-              <p class="card-text">Tipo: <span id="tipo"></span></p>
-              <p class="card-text">Ingredientes: <span id="ingredientes"></span></p>
-              <p class="card-text">Preparacion:  <span id="preparacion"></span></p>
-            </div>
             <a class="btn btn-primary" id="btn-agregar">Agregar</a>
             <a class="btn btn-secondary" id="btn-detalles">Ver Detalles</a>
           </div>
         </div>
+
+        <div class="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Detalle de la Mercaderia</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Tipo: <span id="tipo"></span></p>
+                <p>Ingredientes: <span id="ingredientes"></span></p>
+                <p>Preparacion: <span id="preparacion"></span></p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </template>
 
       <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
-          <div class="modal-content" style="background-color: darkslategrey;">
+          <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="staticBackdropLabel">Pedido</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -217,6 +233,12 @@
           </div>
     </footer>
 
+    <script>
+      const respuesta = document.getElementById('respuesta');
+      const resetRespuesta = () => {
+    respuesta.innerHTML = " ";
+}
+    </script>
   <script type="module" src="/js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
