äccordion mercaderias del pedido

--- a/App de Frontend/Menu Digital/views/comandas.html
+++ b/App de Frontend/Menu Digital/views/comandas.html
@@ -37,8 +37,22 @@
     </nav>
 
     <section id="ver-pedidos">
-        <div class="container-fluid" id="mostrar-pedido">
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="comandas"></div>
+        <div class="container" id="comandas">
+
+                    <table class="table table-striped table-hover mt-4">
+                            <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Forma de entrega</th>
+                                <th scope="col">Precio</th>
+                                <th scope="col">Mercaderias</th>
+                            </tr>
+                            </thead>
+                            <tbody id="pedidoTableBody">
+                
+                            </tbody>
+                        </table>
+            
         </div>   
     </section>
     
