--- a/App de Frontend/Menu Digital/views/comandas.html
+++ b/App de Frontend/Menu Digital/views/comandas.html
@@ -39,7 +39,7 @@
     <section id="ver-pedidos">
         <div class="container" id="comandas">
 
-                    <table class="table table-striped table-hover mt-4">
+                    <!--<table class="table table-striped table-hover mt-4">
                             <thead>
                             <tr>
                                 <th scope="col">ID</th>
@@ -51,7 +51,7 @@
                             <tbody id="pedidoTableBody">
                 
                             </tbody>
-                        </table>
+                        </table>-->
             
         </div>   
     </section>
