--- a/App de Frontend/Menu Digital/views/index.html
+++ b/App de Frontend/Menu Digital/views/index.html
@@ -110,10 +110,12 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Detalle de la Mercaderia</h5>
+                <h4 class="modal-title" id="exampleModalLabel">Detalle del Plato</h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
+                <h4 id="detalle-nombre"></h4>
+                <p>Precio: $ <span id="detalle-precio"></span> </p>
                 <p>Tipo: <span id="tipo"></span></p>
                 <p>Ingredientes: <span id="ingredientes"></span></p>
                 <p>Preparacion: <span id="preparacion"></span></p>
