--- a/App de Frontend/Menu Digital/views/comandas.html
+++ b/App de Frontend/Menu Digital/views/comandas.html
@@ -17,7 +17,7 @@
                         <div class="col-lg-8 d-none d-sm-block">
                             <div id="presentacion">
                                 <h1 class="display-4">Administrador</h1>
-                                <p class="display-8">Aqui podra ver todos los pedidos del dia</p>
+                                <p class="display-8">Aqui podra ver todos los pedidos del dia: <span id="fecha-del-dia"></span></p>
                             </div>
                         </div>
                     </div>
@@ -39,19 +39,6 @@
     <section id="ver-pedidos">
         <div class="container" id="comandas">
 
-                    <!--<table class="table table-striped table-hover mt-4">
-                            <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Forma de entrega</th>
-                                <th scope="col">Precio</th>
-                                <th scope="col">Mercaderias</th>
-                            </tr>
-                            </thead>
-                            <tbody id="pedidoTableBody">
-                
-                            </tbody>
-                        </table>-->
             
         </div>   
     </section>
