--- a/App de Frontend/Menu Digital/views/index.html
+++ b/App de Frontend/Menu Digital/views/index.html
@@ -23,6 +23,27 @@
                                 <P> Debido a la situación actual de pandemia que atraviesa el mundo, nos vimos obligados a tomar medidas para poder seguir atendiendo al público. Una de estas medidas es dejar de compartir la carta con nuestros clientes, es por ello que en esta página web podrá visualizar todos nuestros platos y realizar su pedido. </P>
                             </div>
                         </div>
+                        <div class="col-4">
+                          <div class="container">
+                            <div>
+                                <div class="login-box">
+                                  <h3>Login</h3>
+                                  <div class="textbox">
+                                      <i class="fas fa-users"></i>
+                                      <input type="text" placeholder="Nombre de usuario" name="" value="">
+                                  </div>
+                          
+                                  <div class="textbox">
+                                      <i class="fas fa-user-lock"></i>
+                                      <input type="password" placeholder="Contraseña" name="" value="">
+                                  </div>
+                          
+                                  <button class="btn btn-outline-success" type="submit" id="btn-login">Entrar</button>
+                                  <button class="btn btn-outline-secondary" type="submit" id="btn-registrarse">Registrarse</button>
+                          
+                              </div>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -101,8 +122,8 @@
           <div class="card-body">
             <h5 class="card-title" id="nombre"></h5>
             <p class="card-text">$ <span>500</span></p>
-            <a class="btn btn-primary" id="btn-agregar">Agregar</a>
-            <a class="btn btn-secondary" id="btn-detalles">Ver Detalles</a>
+            <a class="btn btn-outline-success" id="btn-agregar">Agregar</a>
+            <a class="btn btn-outline-secondary" id="btn-detalles">Ver Detalles</a>
           </div>
         </div>
 
@@ -165,38 +186,6 @@
 
     </section>
 
-    <!--
-         <section id="pedidos-section">
-      <div class="contenedor">
-        <h2 class="py-5">Haga su Pedido</h2>     
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-11"></div>
-            <div class="col-1 ms-auto">
-              <a class="sticky-top" id="img-simbolo" data-bs-toggle="modal" href="#staticBackdrop" aria-controls="staticBackdrop">
-                <img src="/img/order-list-2-615397.png" alt="simbolo-pedido">
-              </a> 
-            </div>
-          </div>
-        </div>       
-      </div>
-    </section>
-    -->
- 
-
-    <!--<template id="template-card">
-      <div class="carta">
-        <div class="imgBx">
-            <img src="" class="img-fluid">
-        </div>
-        <div class="contenido">
-            <h2>Pizza</h2>
-            <h4>$<span>Precio</span></h4>
-            <h5>Tipo</h5>
-            <button class="btn btn-primary" id="btn-agregar">Agregar</button>
-        </div>
-      </div>
-    </template>-->
 
     <template id="template-footer">
       <th scope="row" colspan="1">Total seleccionados</th>
