--- a/App de Frontend/Menu Digital/styles/main.css
+++ b/App de Frontend/Menu Digital/styles/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css";
 
 body {
     background-color: #333;
@@ -76,24 +77,13 @@ body {
 }
 
 #rta {
-  width: fit-content;
+  width: min-content;
 }
-/*.carousel {
-  margin: auto;
-  width: 50%;
-}*/
 
 #mercaderia-section-header {
   margin: 25px 50px 30px 50px;
   text-align: center;
 }
-
-/*#pedidos-section {
-  font-family: "Poppins", sans-serif;
-  padding: 10px;
-  display: flex;
-  background: #16384c;
-}*/
 
 #img-simbolo{
   padding-top: 150px;
@@ -116,76 +106,10 @@ body {
   color: #fff;
 }
 
-#btn-agregar {
-  background-color: #24803F;
+#btn-agregar , #btn-detalles {
   border: #333;
 }
-/*.contenedor {
-  position: relative;
-  width: 1100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 30px 20px;
-  margin-top: 100px;
-}
 
-.contenedor .carta {
-  position: relative;
-  max-width: 300px;
-  height: 200px;
-  background: #fff;
-  margin: 30px 10px;
-  padding: 20px 15px;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
-  transition: 0.3s ease-in-out;
-}
-
-.contenedor .carta:hover {
-  height: 400px;
-}
-
-.contenedor .carta .imgBx {
-  position: relative;
-  width: 260px;
-  height: 200px;
-  top: -60px;
-  left: 10px;
-  right: 20px;
-  z-index: 1;
-  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-}
-
-.contenedor .carta .imgBx img {
-  border-radius: 4px;
-}
-
-.img-fluid {
-  width: 260px;
-  height: 200px;
-}
-
-.contenedor .carta .contenido {
-  position: relative;
-  margin-top: -140px;
-  padding: 10px 15px;
-  text-align: center;
-  color: #111;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.3s ease-in-out;
-}
-
-.contenedor .carta:hover .contenido {
-  visibility: visible;
-  opacity: 1;
-  margin-top: -40px;
-  transition-delay: 0.3s;
-}
-*/
 #enviar-pedido {
   margin-top: 15px;
 }
@@ -199,4 +123,59 @@ body {
 
 #detalle-nombre {
   text-align: center;
+}
+
+
+
+
+.login-box{
+  margin-top: 100px;
+    width: 200px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: white;
+}
+.login-box h3{
+    float: left;
+    font-size: 30px;
+    border-bottom: 6px solid #4caf5e;
+    margin-bottom: 30px;
+    padding: 13px 0;
+}
+.textbox{
+    width: 100%;
+    overflow: hidden;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 8px 0;
+    border-bottom: 1px solid  #4caf5e;
+}
+.textbox i{
+    width: 16px;
+    float: left;
+    text-align: center;
+}
+.textbox input{
+    border: none;
+    outline: none;
+    background: none;
+    color: white;
+    font-size: 18px;
+    width: 80%;
+    float: left;
+    margin: 0 10px;
+    padding-left: 5px;
+}
+
+
+#btn-login , #btn-agregar{
+  
+  border: 2px solid  #4caf5e;
+  
+}
+
+#btn-registrarse , #btn-detalles {
+  border: 2px solid rgb(76, 82, 88);
 }
